--- a/css_study/project_spc/index.html
+++ b/css_study/project_spc/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Myeongjo&family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@100..900&family=Single+Day&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/CI_logo.png" type="image/x-icon">
+    <link rel="icon" href="./images/CI_logo.png" type="image/x-icon">
 </head>
 <body>
     <main>
@@ -46,6 +48,29 @@
                         <p class="icon"><img src="./images/sandwich3.png" alt=""></p>
                         <h3>기업가치 2.5조</h3>
                     </div>
+                </div>
+            </div>
+            <div class="strategy">
+                <h2>STRATEGY</h2>
+                <div class="val">
+                    <h3>Value up</h3>
+                    <p>브랜드 및 고부가 제품<br>라인업 강화</p>
+                </div>
+                <div class="exp">
+                    <h3>Expansion</h3>
+                    <p>카테고리 확대/글로<br>벌 확장</p>
+                </div>
+                <div class="pio">
+                    <h3>Pioneer</h3>
+                    <p>유통/제품 혁신을 통<br>한 시장 선도 </p>
+                </div>
+                <div class="fou">
+                    <h3>Foucs</h3>
+                    <p>핵심 역량의 집중, <br>강력한 실행 </p>
+                </div>
+                <div class="sma">
+                    <h3>Smart & Aggressive</h3>
+                    <p>개인과 조직의 창의<br>적 혁신,도전적 성장</p>
                 </div>
             </div>
         </div>
