--- a/css_study/project_table/index.html
+++ b/css_study/project_table/index.html
@@ -46,7 +46,7 @@
         </table>
         <a href="#" class="detail_view">구입내역 자세히 보기</a>
         <div class="btm">
-            <a href="#">웹툰홈 가기</a>
+            <a href="#" class="">웹툰홈 가기</a>
             <a href="#">보관함 보기</a>
         </div>
     </main>
