zepeto langding responsivel

--- a/project_zepeto/index.html
+++ b/project_zepeto/index.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ZEPETO studio </title>
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/responsivel.css">
 </head>
 <body>
-    
+    <header>
+        <!-- 로고 = 사이트 대제목 h1+링크(홈으로 이동) + 로고는 글자만 있어도 이미지로 사용(글꼴유지) +alt에 내용 반드시 의미적으로 작성하기     -->
+        <h1><a href="#"><img src="./images/logo_zepeto_white.png" alt="제페토"></a></h1>
+        <nav>
+            <a href="#">콘텐츠</a>
+            <a href="#">크리에이터 프로그램</a>
+            <a href="#">비즈니스</a>
+            <a href="#">가이드</a>
+            <a href="#">지원</a>
+        </nav>
+        <div class="snb">
+            <a href="#">콘텐츠 관리</a>
+            <a href="#"><img src="./images/bell-regular.svg" alt="알림서비스"></a>
+        </div>
+    </header>
+    <main>
+        <!-- 1. 동영상, 시작하기  -->
+        <!-- div그룹 = 자식이 2개 이상 -->
+        <div class="visual">
+            <video src="./bg.mp4" autoplay muted loop></video>
+            <div class="visual_title">
+                <h2>상상하는 모든 것. <br>제페토 스튜디오에서</h2>
+                <a href="#" class="start_link">시작하기</a>
+            </div>
+        </div>
+        <!-- 2행 크리에이터를 위한 제페토 -->
+        <div class="creater">
+            <h2>크리에이터를 위한 제페토.</h2>
+            <p>제페토 크리에이터는 제페토 세상의 모든 것을 직접 만들 수 있습니다.<br>전 세계 3억 유저에게 당신의 아이디어를 보여주세요!</p>
+            <P class="img "><img src="./images/img_creators.png" alt=""></P>
+            <div class="creater_detail">
+                <div class="item">
+                    <h3>6800만</h3>
+                    <p class="creater_detail_p">스튜디오 아이템 판매량</p>
+                </div>
+                <div class="people">
+                    <h3>230만</h3>
+                    <p class="creater_detail_p">스튜디오 크리에이터 수</p>
+                </div>
+                <div class="zepeto">
+                    <h3>3억</h3>
+                    <p class="creater_detail_p">제페토 가입자 수</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
