zepeto 랜딩페이지 반응형까지 만들기

--- a/project_zepeto/index.html
+++ b/project_zepeto/index.html
@@ -56,6 +56,43 @@
                 </div>
             </div>
         </div>
+        <!-- ------------------------------------제페토 세상----------------------------------- -->
+        <div class="world_all">
+            <div class="bg">
+                <h2>제페토 세상이 내 손안에.</h2>
+                <p class="p_detail">아이템, 월드, 라이브까지.<br>제페토는 크리에이터가 아이디어를 펼칠 수 있는 최고의 플랫폼입니다.</p>
+                <div class="all">
+                    <div class="item">
+                        <h3>아이템</h3>
+                        <p class="detail">패션 아이템을 만들고<br>수익을 창출하세요.</p>
+                        <a href="#" class="more">더 알아보기</a>
+                    </div>
+                    <div class="world">
+                        <h3>월드</h3>
+                        <p class="detail">제페토 세상에<br>내 아이디어가 담긴<br>월드를 만드세요</p>
+                        <a href="#" class="more">더 알아보기</a>
+                    </div>
+                    <div class="live">
+                        <h3>라이브</h3>
+                        <p class="detail">전 세계 유저들과<br>실시간 방송하세요.</p>
+                        <a href="#" class="more">더 알아보기</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="million">
+            <div class="bg">
+                <h2>3억 명을 사로잡을 크리에이터가 될 기회.</h2>
+                <h3>230만 이 넘는 제페토 크리에이터가 전 세계 3억 유저에게 아이디어를 선보이고 있습니다.<br>제페토의 대표 크리에이터를 바로 만나보세요.</h3>
+                <div class="imgs">
+                    <p><img src="./images/img_slider_01.png" alt="#"></p>
+                    <p><img src="./images/img_slider_02.png" alt="#"></p>
+                    <p><img src="./images/img_slider_03.png" alt="#"></p>
+                    <p><img src="./images/img_slider_04.png" alt="#"></p>
+                    <p><img src="./images/img_slider_05.png" alt="#"></p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
